fix(accordion): fixing text-align override by parent.

--- a/packages/web-components/src/components/rux-accordion/rux-accordion-item/rux-accordion-item.scss
+++ b/packages/web-components/src/components/rux-accordion/rux-accordion-item/rux-accordion-item.scss
@@ -17,6 +17,7 @@ summary {
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
+    text-align: left; /*needed to fix problem where parent will override text-align*/
     align-items: center;
     border-radius: var(--radius-base);
     background-color: var(--color-background-surface-header);
